--- a/src/Components/Myself/myself.css
+++ b/src/Components/Myself/myself.css
@@ -1,21 +1,76 @@
-body {
-    font-size: 1.5rem;
+.heading {
+    background-image: linear-gradient( rgba(0,0,0,0.5), rgba(0, 0, 0, 0.5) ), url("https://i.pinimg.com/originals/ca/aa/da/caaada681189720e0a64c87e2c3446b9.jpg");
+    width: 100%;
+    height: 900px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.heading h1 h2{
+    align-self: center;
+    background-color: black;
+}
+
+.about {
+    width: 60%;
+    font-size: 1.7rem;
+}
+
+.about img {
+    width: 100px;
+    height: 100px
 }
 
 .Me {
     display: flex;
+    margin: 20px;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .profile__img {
-    background-image: url('../img/Kelvin\ Ramos-\ Benitez.jpg');
-    height: 400px;
-    width: 25%;
+    background-image: url('/img/Kelvin Ramos- Benitez.jpg');
+    height: 500px;
+    width: 300px;
     position: relative;
+    justify-content: center;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-.about {
-    width: 75%;
-    font-size: 1.3rem;
+
+@media screen and (max-width: 600px) {
+    .heading {
+        height: 200px;
+        font-size: .4rem;
+    }
+
+    .profile__img {
+        height: 300px;
+        width: 200px;
+    }
+
+    .Me {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .heading {
+        height: 400px;
+        font-size: .4rem;
+    }
+
+    .profile__img {
+        height: 300px;
+        width: 200px;
+    }
+
+    .Me {
+        flex-direction: column;
+    }
 }
