--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -3,7 +3,40 @@
     padding: 10px 0px;
 }
 
-.copyright {
+.footer_ul li{
+    list-style: none;
+}
+
+.footer_ul a {
+    padding: 1.1rem;
     color: white;
-    align-content: space-between;
+    text-decoration: none;
+}
+
+.footer_ul li :hover{
+    background-color: white;
+    color: black;
+}
+
+.copyright {
+    display: flex;
+    color: white;
+    justify-content: center;
+    width: 100%;
+}
+
+.contact__icon {
+    text-align: center;
+  }
+
+  .contact__icon img{
+    width: 50px;
+    height: 50px;
+    margin: 0px 20px;
+  }
+
+@media screen and (max-width: 800px) {
+    .footer {
+        font-size: 10px;
+    }
 }
