--- a/src/Components/Myself/myself.css
+++ b/src/Components/Myself/myself.css
@@ -8,17 +8,10 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
-.heading h1 h2{
-    align-self: center;
-    background-color: black;
-}
 
-.about {
-    width: 60%;
-    font-size: 1.7rem;
-}
 
 .about img {
     width: 100px;
@@ -29,24 +22,29 @@
     display: flex;
     margin: 20px;
     flex-direction: row;
-    justify-content: space-between;
 }
 
 .profile__img {
     background-image: url('/img/Kelvin Ramos- Benitez.jpg');
     height: 500px;
     width: 300px;
-    position: relative;
-    justify-content: center;
     background-size: contain;
     background-repeat: no-repeat;
+    align-self: center;
 }
 
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .heading {
-        height: 200px;
-        font-size: .4rem;
+        height: 400px;
+    }
+
+    body {
+    font-size: .5rem;
+    }
+
+    .heading h1 h2{
+        align-self: center;
+        background-color: black;
     }
 
     .profile__img {
@@ -59,10 +57,15 @@
     }
 }
 
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 600px) {
     .heading {
-        height: 400px;
-        font-size: .4rem;
+        height: 200px;
+    }
+
+    .heading h1 h2{
+        align-self: center;
+        background-color: black;
     }
 
     .profile__img {
