--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -12,13 +12,13 @@
 .Projects {
     border: black solid;
     margin: 20px;
-    /* padding: 20px; */
     width: 47%;
     border-radius: 10px;
+    background-color: white;
 }
 
 .Projects img {
-    height: auto;
+    height: 450px;
     width: 100%;
 }
 
@@ -29,27 +29,45 @@
 .button__link {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 10px 0px;
+    margin: 25px 0px;
+    justify-content: center;
+}
+
+#divider {
+    background-color: black;
+    height: 50px;
+    width: 3px;
+    margin: 0px 10px;
 }
 
 .github__link {
     background-color: black;
     text-decoration: none;
     color: white;
-    padding: 5px;
+    padding: 10px;
 }
 
 .project__link {
     background-color: black;
     text-decoration: none;
     color: white;
-    padding: 5px;
+    padding: 10px;
 }
 
 .Projects a:hover {
     background-color: white;
     color: black;
+}
+
+@media screen and (max-width: 800px) {
+    .my__projects {
+        flex-direction: column;
+    }
+
+    .Projects {
+        width:80%;
+        margin: 10px auto;
+    }
 }
 
 @media screen and (max-width: 800px) {
