--- a/src/Components/Myself/myself.css
+++ b/src/Components/Myself/myself.css
@@ -2,7 +2,7 @@
     background-image: linear-gradient( rgba(0,0,0,0.5), rgba(0, 0, 0, 0.5) ), url("https://i.pinimg.com/originals/ca/aa/da/caaada681189720e0a64c87e2c3446b9.jpg");
     width: 100%;
     height: 900px;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     color: white;
     text-align: center;
@@ -35,11 +35,12 @@
 
 @media screen and (max-width: 800px) {
     .heading {
-        height: 400px;
+        height: 360px;
+        justify-content: center;
     }
 
     body {
-    font-size: .5rem;
+    font-size: .7rem;
     }
 
     .heading h1 h2{
@@ -48,20 +49,30 @@
     }
 
     .profile__img {
-        height: 300px;
-        width: 200px;
+        height: 200px;
+        width: 100px;
     }
 
     .Me {
         flex-direction: column;
+    }
+
+    .about img {
+        width: 50px;
+        height: 50px
     }
 }
 
 
 @media screen and (max-width: 600px) {
     .heading {
-        height: 200px;
+        width: 100%;
+        height: auto;
     }
+
+    body {
+        font-size: .5rem;
+        }
 
     .heading h1 h2{
         align-self: center;
@@ -69,11 +80,16 @@
     }
 
     .profile__img {
-        height: 300px;
-        width: 200px;
+        height: 75px;
+        width: 50px;
     }
 
     .Me {
         flex-direction: column;
+    }
+
+    .about img {
+        width: 25px;
+        height: 25px
     }
 }
